Cleans up the tooltips spacing issues and puts the JS inside the correct location.

--- a/Apps/UseUI/static/css/style.css
+++ b/Apps/UseUI/static/css/style.css
@@ -368,17 +368,21 @@ display:none;
     position:absolute;
     right:20px;
     top:6px;
-    font-size:70%;
+    font-size:10px;
 }
 
 .tooltip {
     display:none;
     background:transparent url(../img/white_arrow.png) no-repeat;
     font-size:80%;
-    height:70px;
-    width:195px;
-    padding:12px;
-    padding-top:55px;
+    height:122px;
+    width:209px;
+}
+
+.tooltip div {
+    margin:12px;
+    margin-top:50px;
+    word-wrap:break-word;
     color:#000;
     text-align:center; 
 }
